# qemu-camp-2026-exper-ovwxxwvo

./: env.sh  git.sh
00/: gitfix.sh  gitpush.sh  gitpush_1.sh  install.sh  tmux.sh
hw/i2c/: Kconfig  i2c_gpio.c  meson.build
hw/riscv/: Kconfig  g233.c
include/hw/i2c/: at24c02_slave.h  i2c_gpio.h
include/hw/riscv/: g233.h
rust/: Cargo.toml
rust/hw/: Kconfig  meson.build
rust/hw/i2c/: Cargo-.toml  Cargo.toml  Kconfig  meson.build
rust/hw/i2c-backup/: build.rs  meson.build
rust/hw/i2c-backup/src/: bus.rs  lib.rs
rust/hw/i2c/00/: Cargo.toml  Kconfig  meson.build  wrapper.h
rust/hw/i2c/00/i2c/: meson.build
rust/hw/i2c/00/i2c/src/: bindings.rs  core.rs  device.rs  lib.rs  test.rs
rust/hw/i2c/00/src/: bus.rs  registers.rs
rust/hw/i2c/at24c02_slave/: Cargo.toml  meson.build  wrapper.h
rust/hw/i2c/at24c02_slave/src/: bindings.rs  device.rs  lib.rs
rust/hw/i2c/i2c/: Cargo.toml  meson.build
rust/hw/i2c/i2c/src/: lib.rs  test.rs
rust/hw/i2c/i2c_core/: Cargo.toml  meson.build
rust/hw/i2c/i2c_core/src/: core.rs  lib-.rs  lib.rs  test.rs
rust/hw/i2c/i2c_gpio/: Cargo.toml  README.md  meson.build  wrapper.h
rust/hw/i2c/i2c_gpio/src/: bindings.rs  device.rs  lib.rs
rust/hw/i2c/i2c_slave/: Cargo.toml  meson.build
rust/hw/i2c/i2c_slave/src/: at24c02.rs  lib.rs
